Moved editor JS to a separate file.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Web Applications/TM_Website/bin/*.xml
 /Web Applications/TM_Website/App_Code/TM_Customization_Local.cs
 /Web Applications/TM_Website/gitUserData.config
 /Web Applications/TM_Website/_Customizations
+/Web Applications/_ReSharper.TM_Website
