Web.config modified.

--- a/Web Applications/TM_Website/Web.config
+++ b/Web Applications/TM_Website/Web.config
@@ -26,7 +26,7 @@
     <customErrors mode="Off"/>
     <!-- this is actually a feature requirement for TeamMentor since the error messages are supposed to be handled by the client -->
     <!--<customErrors mode="On" defaultRedirect="/html_pages/errorPage.html"/> -->
-    <httpRuntime maxRequestLength="50000" executionTimeout="3600" requestValidationMode="2.0"/>
+    <httpRuntime enableVersionHeader="false" maxRequestLength="50000" executionTimeout="3600" requestValidationMode="2.0"/>
     <authentication mode="None"/>
     <identity impersonate="false"/>
     <!-- for TeamMentor ActiveDirectory support set to true-->
