--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -269,7 +269,10 @@
     <Content Include="Javascript\bootstrap\glyphicons-halflings.png" />
     <Content Include="Javascript\gAnalytics\ga.js" />
     <Content Include="Javascript\gAnalytics\TrackingCode.js" />
+    <Content Include="Javascript\uuid-generator.js" />
+    <Content Include="Javascript\Html_Pages\GuidanceItemEditor\cleditor\cleditor.js" />
     <Content Include="Javascript\Html_Pages\GuidanceItemEditor\GuidanceItemEditor.js" />
+    <Content Include="Javascript\Html_Pages\GuidanceItemViewer\GuidanceItemViewer.js" />
     <Content Include="Javascript\jQuery.DataTable\jquery.dataTables.min.js" />
     <Content Include="Javascript\jQuery\jquery.textarea.js" />
     <Content Include="Javascript\jQuery\jquery-1.8.1.min.js" />
