Adding TBot Page Current_Virtual_Articles.cshtml which shows the current virtual Articles (and allows the adding of redirect urls)

--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -669,6 +669,7 @@
     <Content Include="TBot\Admin\Import Legacy Users.cshtml" />
     <Content Include="TBot\Users\New Random User.cshtml" />
     <Content Include="TBot\Admin\UserData FirstScript.cshtml" />
+    <Content Include="TBot\VirtualArticles\Current_Virtual_Articles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
