Adding TBot page (Article_Links.cshtml) to view all links from a particular article

--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -670,6 +670,7 @@
     <Content Include="TBot\Users\New Random User.cshtml" />
     <Content Include="TBot\Admin\UserData FirstScript.cshtml" />
     <Content Include="TBot\VirtualArticles\Current_Virtual_Articles.cshtml" />
+    <Content Include="TBot\VirtualArticles\Article_Links.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
