Improved VirtualArticles capabilities where now it is possible to have a default 'upstream' server (in cases there is a GUID that doesn't exist in the current server Added new TMConfig settings to configure the new VirtualArticles capabilities Added ability to edit TMConfig (via TBOT page and with Webservices method) Changed the colors of the Article_Links Current_Virtual_Articles.cshtml now shows the AutoRedirectIfGuidNotFound and AutoRedirectTarget mappings

--- a/Web Applications/TM_Website/TmConfig.config
+++ b/Web Applications/TM_Website/TmConfig.config
@@ -10,7 +10,7 @@
     <Enable304Redirects>true</Enable304Redirects>
   </TMSetup>
   <TMSecurity>
-    <Show_ContentToAnonymousUsers>false</Show_ContentToAnonymousUsers>
+    <Show_ContentToAnonymousUsers>true</Show_ContentToAnonymousUsers>
     <SSL_RedirectHttpToHttps>true</SSL_RedirectHttpToHttps>
     <EvalAccounts_Enabled>true</EvalAccounts_Enabled>
     <EvalAccounts_Days>15</EvalAccounts_Days>
@@ -36,4 +36,8 @@
     <DefaultLibraryToInstall_Name />
     <DefaultLibraryToInstall_Location />
   </OnInstallation>
+  <VirtualArticles>
+    <AutoRedirectIfGuidNotFound>true</AutoRedirectIfGuidNotFound>
+    <AutoRedirectTarget>https://teammentor.net/article/</AutoRedirectTarget>
+  </VirtualArticles>
 </TMConfig>
