--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -671,6 +671,7 @@
     <Content Include="TBot\Admin\UserData FirstScript.cshtml" />
     <Content Include="TBot\VirtualArticles\Current_Virtual_Articles.cshtml" />
     <Content Include="TBot\VirtualArticles\Article_Links.cshtml" />
+    <Content Include="TBot\Admin\Config\Edit_TMConfig.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
