--- a/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
+++ b/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="TM_XmlDatabase\Test_LoadLibrariesFromDisk.cs" />
     <Compile Include="TM_XmlDatabase\Test_LoadLibraries_FromExternalSource.cs" />
     <Compile Include="TM_XmlDatabase\Test_NGit_Support.cs" />
+    <Compile Include="TM_XmlDatabase\Test_TMServer_Config.cs" />
     <Compile Include="TM_XmlDatabase\Test_TM_TestData.cs" />
     <Compile Include="TM_XmlDatabase\Test_Setup.cs" />
     <Compile Include="TM_XmlDatabase\Test_UserData_GitStorage.cs" />
