--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -269,11 +269,10 @@
     <Content Include="Javascript\bootstrap\glyphicons-halflings.png" />
     <Content Include="Javascript\gAnalytics\ga.js" />
     <Content Include="Javascript\gAnalytics\TrackingCode.js" />
-    <Content Include="Javascript\Html_Pages\GuidanceItemEditor\GuidanceItemPreview.js" />
-    <Content Include="Javascript\uuid-generator.js" />
-    <Content Include="Javascript\Html_Pages\GuidanceItemEditor\cleditor\cleditor.js" />
-    <Content Include="Javascript\Html_Pages\GuidanceItemEditor\GuidanceItemEditor.js" />
-    <Content Include="Javascript\Html_Pages\GuidanceItemViewer\GuidanceItemViewer.js" />
+    <Content Include="Javascript\TM\cleditor.js" />
+    <Content Include="Javascript\TM\GuidanceItemPreview.js" />
+    <Content Include="Javascript\TM\GuidanceItemEditor.js" />
+    <Content Include="Javascript\TM\GuidanceItemViewer.js" />
     <Content Include="Javascript\jQuery.DataTable\jquery.dataTables.min.js" />
     <Content Include="Javascript\jQuery\jquery.textarea.js" />
     <Content Include="Javascript\jQuery\jquery-1.8.1.min.js" />
@@ -579,12 +578,14 @@
     <Content Include="Javascript\TM\WebServices.js" />
     <Content Include="Javascript\TM_WS_Methods.js" />
     <Content Include="Javascript\webtoolkit.sha256.js" />
+    <Content Include="Javascript\_mappings\ArticleEditor_JS.txt" />
     <Content Include="Javascript\_mappings\ControlPanel_CSS.txt" />
     <Content Include="Javascript\_mappings\ControlPanel_JS.txt" />
     <Content Include="Javascript\_mappings\ControlPanel_JS_TM.txt" />
     <Content Include="Javascript\_mappings\ArticleView_JS.txt" />
     <Content Include="Javascript\_mappings\DataTable_JS.txt" />
     <Content Include="Javascript\_mappings\GlobalVariables.txt" />
+    <Content Include="Javascript\_mappings\NotepadEdit_JS.txt" />
     <Content Include="Javascript\_mappings\WebServices_JS.txt" />
     <Content Include="Javascript\_mappings\HomePage_CSS.txt" />
     <Content Include="Javascript\_mappings\HomePage_JS.txt" />
