--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -53,10 +53,12 @@
     <SkipPostSharp>True</SkipPostSharp>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentSharp.CoreLib, Version=5.1.1.1, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentSharp.CoreLib.5.0.80\lib\net35\FluentSharp.CoreLib.dll</HintPath>
+    </Reference>
     <Reference Include="MarkdownDeep">
       <HintPath>..\packages\MarkdownDeep.NET.1.5\lib\.NetFramework 3.5\MarkdownDeep.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="RazorEngine, Version=3.2.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <HintPath>..\packages\RazorEngine.3.2.0\lib\net40\RazorEngine.dll</HintPath>
     </Reference>
@@ -287,6 +289,16 @@
     <Content Include="Javascript\bootstrap\glyphicons-halflings.png" />
     <Content Include="Javascript\gAnalytics\ga.js" />
     <Content Include="Javascript\gAnalytics\TrackingCode.js" />
+    <Content Include="Javascript\MarkdownDeep\MarkdownDeep License.txt" />
+    <Content Include="Javascript\MarkdownDeep\MarkdownDeep Quick Reference.txt" />
+    <Content Include="Javascript\MarkdownDeep\MarkdownDeep.css" />
+    <Content Include="Javascript\MarkdownDeep\MarkdownDeepLib.min.js" />
+    <Content Include="Javascript\MarkdownDeep\mdd_ajax_loader.gif" />
+    <Content Include="Javascript\MarkdownDeep\mdd_gripper.png" />
+    <Content Include="Javascript\MarkdownDeep\mdd_help.htm" />
+    <Content Include="Javascript\MarkdownDeep\mdd_modal_background.png" />
+    <Content Include="Javascript\MarkdownDeep\mdd_styles.css" />
+    <Content Include="Javascript\MarkdownDeep\mdd_toolbar.png" />
     <Content Include="Javascript\TM\cleditor.js" />
     <Content Include="Javascript\TM\GuidanceItemPreview.js" />
     <Content Include="Javascript\TM\GuidanceItemEditor.js" />
@@ -610,7 +622,7 @@
     <Content Include="Javascript\_mappings\HomePage_JS_TM.txt" />
     <Content Include="App_Code\MVC_Config.cs" />
     <Compile Include="MVC\ExtensionMethods\MarkdownDeep_ExtensionMethods.cs" />
-    <Compile Include="MVC\Controllers\MvcTestController.cs" />
+    <Compile Include="MVC\Controllers\MarkdownController.cs" />
     <Content Include="TBot\Tests\hello.cshtml" />
     <Content Include="TBot\Tests\theTime.cshtml" />
     <Content Include="TBot\TBotMain.html" />
@@ -677,7 +689,9 @@
     <Content Include="TBot\Admin\LiveData\IISSessions.cshtml" />
     <Content Include="TBot\Views\User_Activities.cshtml" />
     <Content Include="TBot\NGit\GitStatus.cshtml" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="TBot\Messaging\Send_Test_Email.cshtml" />
     <Content Include="TBot\Views\GitDiff_UserData_Commit.cshtml" />
     <Content Include="TBot\Views\GitDiff_UserData_File.cshtml" />
@@ -700,8 +714,9 @@
     <Content Include="TBot\VirtualArticles\Article_Links.cshtml" />
     <Content Include="TBot\Admin\Config\Edit_TMConfig.cshtml" />
     <Content Include="TBot\Admin\Config\TMServer_Config.cshtml" />
-    <Content Include="MVC\Views\Index.cshtml" />
+    <Content Include="MVC\Views\MarkDown_Viewer.cshtml" />
     <Content Include="MVC\Views\_Layout.cshtml" />
+    <Content Include="MVC\Views\Markdown_Editor.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
