--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ Web Applications/TeamMentor.UnitTests/bin/
 Web Applications/TM_Website/bin/*.xml
 /Web Applications/TM_Website/App_Code/TM_Customization_Local.cs
 /Web Applications/TM_Website/gitUserData.config
-/Web Applications/TM_Website/_ReSharper.TM_Website
+/Web Applications/_ReSharper.TM_Website
