Add Markdown support to the article viewer (on both stand-alone viewer and preview mode) Added Markdown edit buttons to Article viewer Moved markdown server-side transformsation to TeamMentor.CoreLib Added webservice method to perform markdown transformations (called 'MarkdownTransform') Added Javascript herlper method to call MarkdownTransform Set markdown save redirect to be the normal article viewer Changed a bit the layout of the Markdown editor page (with link back to the article) Added Markdown to the list of DataType in the NotepadEditor (so that an article can be changed from Html/Wikitext to markdown)

--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -56,9 +56,6 @@
     <Reference Include="FluentSharp.CoreLib, Version=5.1.1.1, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentSharp.CoreLib.5.0.80\lib\net35\FluentSharp.CoreLib.dll</HintPath>
     </Reference>
-    <Reference Include="MarkdownDeep">
-      <HintPath>..\packages\MarkdownDeep.NET.1.5\lib\.NetFramework 3.5\MarkdownDeep.dll</HintPath>
-    </Reference>
     <Reference Include="RazorEngine, Version=3.2.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <HintPath>..\packages\RazorEngine.3.2.0\lib\net40\RazorEngine.dll</HintPath>
     </Reference>
@@ -621,7 +618,6 @@
     <Content Include="Javascript\_mappings\HomePage_JS.txt" />
     <Content Include="Javascript\_mappings\HomePage_JS_TM.txt" />
     <Content Include="App_Code\MVC_Config.cs" />
-    <Compile Include="MVC\ExtensionMethods\MarkdownDeep_ExtensionMethods.cs" />
     <Compile Include="MVC\Controllers\MarkdownController.cs" />
     <Content Include="TBot\Tests\hello.cshtml" />
     <Content Include="TBot\Tests\theTime.cshtml" />
@@ -718,7 +714,9 @@
     <Content Include="MVC\Views\_Layout.cshtml" />
     <Content Include="MVC\Views\Markdown_Editor.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="MVC\ExtensionMethods\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TeamMentor.CoreLib\TeamMentor.CoreLib.csproj">
       <Project>{87BACB04-640F-44ED-8F01-45224D52A883}</Project>
