--- a/Web Applications/TeamMentor.CoreLib/TeamMentor.CoreLib.csproj
+++ b/Web Applications/TeamMentor.CoreLib/TeamMentor.CoreLib.csproj
@@ -53,6 +53,9 @@
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
+    <Reference Include="MarkdownDeep">
+      <HintPath>..\packages\MarkdownDeep.NET.1.5\lib\.NetFramework 3.5\MarkdownDeep.dll</HintPath>
+    </Reference>
     <Reference Include="PostSharp, Version=2.1.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <HintPath>..\packages\PostSharp.2.1.7.28\lib\net20\PostSharp.dll</HintPath>
     </Reference>
@@ -82,6 +85,7 @@
   <ItemGroup>
     <Compile Include="TM_AppCode\Authentication\ExtensionMethods\RoleBaseSecurity_ExtensionMethods.cs" />
     <Compile Include="TM_AppCode\Authentication\ExtensionMethods\TeamMentorUserManagement_ExtensionMethods.cs" />
+    <Compile Include="TM_AppCode\O2_Scripts_APIs\MarkdownDeep_ExtensionMethods.cs" />
     <Compile Include="TM_AppCode\O2_Scripts_APIs\O2_Utils.cs" />
     <Compile Include="TM_AppCode\Schemas\TMServer.cs" />
     <Compile Include="TM_AppCode\Schemas_ExtMet\TmConfig_ExtMet.cs" />
