--- a/Web Applications/TM_Website/TM_Website.csproj
+++ b/Web Applications/TM_Website/TM_Website.csproj
@@ -617,7 +617,6 @@
     <Content Include="Javascript\_mappings\HomePage_CSS.txt" />
     <Content Include="Javascript\_mappings\HomePage_JS.txt" />
     <Content Include="Javascript\_mappings\HomePage_JS_TM.txt" />
-    <Content Include="App_Code\MVC_Config.cs" />
     <Compile Include="MVC\Controllers\MarkdownController.cs" />
     <Content Include="TBot\Tests\hello.cshtml" />
     <Content Include="TBot\Tests\theTime.cshtml" />
@@ -713,8 +712,10 @@
     <Content Include="MVC\Views\MarkDown_Viewer.cshtml" />
     <Content Include="MVC\Views\_Layout.cshtml" />
     <Content Include="MVC\Views\Markdown_Editor.cshtml" />
+    <Content Include="MVC\Views\Loggin_Needed.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Code\" />
     <Folder Include="MVC\ExtensionMethods\" />
   </ItemGroup>
   <ItemGroup>
