--- a/Web Applications/TeamMentor.CoreLib/packages.config
+++ b/Web Applications/TeamMentor.CoreLib/packages.config
@@ -5,11 +5,12 @@
   <package id="FluentSharp.CoreLib" version="5.0.80" targetFramework="net40" />
   <package id="FluentSharp.NGit" version="5.0.80" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" />
+  <package id="MarkdownDeep.NET" version="1.5" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="PostSharp" version="2.1.7.28" targetFramework="net40" />
+  <package id="PostSharp" version="3.0.28" targetFramework="net40" />
   <package id="RazorEngine" version="3.2.0" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
