Adding support for NodeJs (required for Markdown transformations) Added UnitTests for Markdown and NodeJs Small UnitTest refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ Web Applications/TM_Website/bin/*.xml
 /Web Applications/TM_Website/gitUserData.config
 /Web Applications/_ReSharper.TM_Website
 *.ncrunchsolution
+
+*.ncrunchproject
+
+*.cache
