--- a/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
+++ b/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
@@ -65,8 +65,9 @@
     <Reference Include="O2_Platform_External_SharpDevelop, Version=5.1.1.0, Culture=neutral, PublicKeyToken=55a0f9bf4256d533, processorArchitecture=MSIL">
       <HintPath>..\packages\O2.Platform.External.SharpDevelop.5.0.80\lib\net35\O2_Platform_External_SharpDevelop.dll</HintPath>
     </Reference>
-    <Reference Include="PostSharp, Version=2.1.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
-      <HintPath>..\packages\PostSharp.2.1.7.28\lib\net20\PostSharp.dll</HintPath>
+    <Reference Include="PostSharp, Version=3.0.28.9, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\PostSharp.3.0.28\lib\net20\PostSharp.dll</HintPath>
     </Reference>
     <Reference Include="Sharpen, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -92,6 +93,8 @@
   <ItemGroup>
     <Compile Include="CoreLib\Test_Crypto.cs" />
     <Compile Include="CoreLib\Test_HandleRequest_LibraryData.cs" />
+    <Compile Include="CoreLib\Test_Markdown.cs" />
+    <Compile Include="CoreLib\Test_NodeJS.cs" />
     <Compile Include="CoreLib\Test_Schemas.cs" />
     <Compile Include="CoreLib\Test_TM_UserData_Ex_Users_Persistance.cs" />
     <Compile Include="Messaging\Test_Email.cs" />
@@ -99,6 +102,7 @@
     <Compile Include="CoreLib\Test_TM_UserData.cs" />
     <Compile Include="CoreLib\Test_Tracking_Application.cs" />
     <Compile Include="Asmx_WebServices\Test_WebServices_Security.cs" />
+    <Compile Include="RequiresPostSharp.cs" />
     <Compile Include="REST_Direct\Test_TBot.cs" />
     <Compile Include="TM_XmlDatabase\Test_Library_SaveToDisk.cs" />
     <Compile Include="TM_XmlDatabase\Test_LoadLibrariesFromDisk.cs" />
@@ -114,6 +118,7 @@
     <Compile Include="_Temp\FluentSharp_ExtensionMethods_To_add.cs" />
     <Compile Include="_Temp\NGitAPI_ExtraExensionMethods.cs" />
     <Compile Include="_Test_ConfigAndHelpers\Tests_Config.cs" />
+    <Compile Include="_Test_ConfigAndHelpers\TM_Test_Utils.cs" />
     <Compile Include="_Test_ConfigAndHelpers\TM_WebServices_InMemory.cs" />
     <Compile Include="_Test_ConfigAndHelpers\TM_XmlDatabase_InMemory.cs" />
     <Compile Include="_Test_ConfigAndHelpers\Moq\Test_API_Moq_HttpContext.cs" />
@@ -167,7 +172,7 @@
     <Content Include="NGit_Dlls\Sharpen.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\PostSharp.2.1.7.28\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.2.1.7.28\tools\PostSharp.targets')" />
+  <Import Project="..\packages\PostSharp.3.0.28\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.3.0.28\tools\PostSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
