--- a/Web Applications/packages/FluentSharp.SharpDevelopEditor.5.3.112/FluentSharp.SharpDevelopEditor.5.3.112.nuspec
+++ b/Web Applications/packages/FluentSharp.SharpDevelopEditor.5.3.112/FluentSharp.SharpDevelopEditor.5.3.112.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>O2.Platform.External.SharpDevelop</id>
-    <version>5.0.83</version>
+    <id>FluentSharp.SharpDevelopEditor</id>
+    <version>5.3.112</version>
     <title>O2.Platform - SharpDevelop Editor Fork</title>
     <authors>O2 Platform</authors>
     <owners>O2 Platform</owners>
@@ -10,9 +10,7 @@
     <projectUrl>http://o2platform.wordpress.com/</projectUrl>
     <iconUrl>https://www.owasp.org/images/f/f5/O2_Logo_no_Shadow.jpg</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Fork of SharpDevelop Editor (for the O2 Platform)
-
-Uses the FluentSharp APIs</description>
+    <description>Fork of SharpDevelop Editor (for the O2 Platform) Uses the FluentSharp APIs</description>
     <summary>Fork of SharpDevelop Editor (for the O2 Platform)</summary>
     <releaseNotes>5.0.x  - version auto created from TeamCity
           5.0.3.0 - Renamed assembly name
@@ -23,7 +21,7 @@ Uses the FluentSharp APIs</description>
     <tags>Fluent OWASP O2Platform Security</tags>
     <dependencies>
       <group targetFramework=".NETFramework3.5">
-        <dependency id="FluentSharp.BCL" />
+        <dependency id="FluentSharp.WinForms" />
         <dependency id="FluentSharp.CoreLib" />
       </group>
     </dependencies>
