Fixing Issue_663 https://github.com/TeamMentor/Master/issues/663 **Fixing a non deterministic test that failed sporadic (Sending emails). At the time of testing, I failed several times, so I re factored it.

--- a/Web Applications/TM_Website/TmConfig.config
+++ b/Web Applications/TM_Website/TmConfig.config
@@ -36,4 +36,8 @@
     <DefaultLibraryToInstall_Name />
     <DefaultLibraryToInstall_Location />
   </OnInstallation>
+  <VirtualArticles>
+    <AutoRedirectIfGuidNotFound>false</AutoRedirectIfGuidNotFound>
+    <AutoRedirectTarget>https://teammentor.net/article/</AutoRedirectTarget>
+  </VirtualArticles>
 </TMConfig>
