--- a/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
+++ b/Web Applications/TeamMentor.UnitTests/TeamMentor.UnitTests.csproj
@@ -109,6 +109,7 @@
     <Compile Include="TM_XmlDatabase\Test_Users_Sessions.cs" />
     <Compile Include="TM_XmlDatabase\Test_Users_UserActivities.cs" />
     <Compile Include="CoreLib\Test_Utils_GoogleAnalytics.cs" />
+    <Compile Include="TM_XmlDatabase\Test_Virtual_Articles.cs" />
     <Compile Include="_Temp\FluentSharp_ExtensionMethods_To_add.cs" />
     <Compile Include="_Temp\NGitAPI_ExtraExensionMethods.cs" />
     <Compile Include="_Test_ConfigAndHelpers\Tests_Config.cs" />
