Fixing HTML articles without JavaScript

--- a/Web Applications/TeamMentor.CoreLib/packages.config
+++ b/Web Applications/TeamMentor.CoreLib/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Algorim.CreoleWiki" version="1.0.4335.37128" targetFramework="net40" />
   <package id="AntiXSS" version="4.2.1" targetFramework="net40" />
   <package id="FluentSharp.CoreLib" version="5.3.121" targetFramework="net40" />
   <package id="FluentSharp.NGit" version="5.3.121" targetFramework="net40" />
