--- a/Web Applications/TM_Website/TmConfig.config
+++ b/Web Applications/TM_Website/TmConfig.config
@@ -14,12 +14,11 @@
     <Show_ContentToAnonymousUsers>false</Show_ContentToAnonymousUsers>
     <Show_LibraryToAnonymousUsers>true</Show_LibraryToAnonymousUsers>
     <SSL_RedirectHttpToHttps>true</SSL_RedirectHttpToHttps>
-    <NewAccounts_Enabled>true</NewAccounts_Enabled>
+    <NewAccounts_Enabled>false</NewAccounts_Enabled>
     <NewAccounts_DontExpire>false</NewAccounts_DontExpire>
     <EvalAccounts_Enabled>true</EvalAccounts_Enabled>
     <EvalAccounts_Days>15</EvalAccounts_Days>
     <REST_AllowCrossDomainAccess>false</REST_AllowCrossDomainAccess>
-    <SingleSignOn_Enabled>false</SingleSignOn_Enabled>
     <Sanitize_HtmlContent>false</Sanitize_HtmlContent>
     <Default_AdminUserName>admin</Default_AdminUserName>
     <Default_AdminPassword>!!tmadmin</Default_AdminPassword>
@@ -37,7 +36,7 @@
     <AutoCommit_LibraryData>false</AutoCommit_LibraryData>
   </Git>
   <OnInstallation>
-    <ForceAdminPasswordReset>false</ForceAdminPasswordReset>
+    <ForceDefaultAdminPassword>false</ForceDefaultAdminPassword>
     <DefaultLibraryToInstall_Name />
     <DefaultLibraryToInstall_Location />
   </OnInstallation>
